o extract protocol specific stuff to microorb-protocol o implement MicroOrb c++ class of the orb.

--- a/usb-host/Makefile
+++ b/usb-host/Makefile
@@ -1,8 +1,8 @@
 
-CFLAGS=-Wall
+CXXFLAGS=-Wall
 
-orb : orb.o
-	$(CXX) -lusb $< -o $@
+orb : orb.o microorb.o
+	$(CXX) -lusb $^ -o $@
 
 clean:
-	rm -f orb orb.o
+	rm -f orb orb.o microorb.o
