o add measurements and documentation 'layer' o output gerber for it and documentation.

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -6,7 +6,8 @@ GERBER_FILES=fab/$(PROJECT)-sol-bot-copper.grb.sol \
              fab/$(PROJECT)-sol-bot-silk.grb.pls \
 	     fab/$(PROJECT)-cmp-top-copper.grb.cmp \
              fab/$(PROJECT)-cmp-top-stop.grb.stc \
-             fab/$(PROJECT)-cmp-top-silk.grb.plc
+             fab/$(PROJECT)-cmp-top-silk.grb.plc \
+             fab/$(PROJECT)-documentation.grb
 EXCELLON_FILES=fab/$(PROJECT).drd
 
 EPS_FILES=ps/$(PROJECT)-sol-bot-copper.eps \
@@ -25,7 +26,7 @@ PDF_PANELS=ps/$(PROJECT)-sol-bot-copper.panel.pdf \
 	   ps/$(PROJECT)-sol-bot-silk.panel-mirror.pdf
 
 SCHEMATIC=ps/$(PROJECT)-schematic.pdf
-CHEAT_SHEET=ps/$(PROJECT)-cheat-sheet.pdf
+DOCUMENTATION_SHEET=ps/$(PROJECT)-documentation.pdf
 
 CAM_PROCESS=$(EAGLE_BIN) -N+ -c+ -X
 GERB_CAM=$(CAM_PROCESS) -dGERBER_RS274X
@@ -48,11 +49,12 @@ all : gerber excellon fab-clean postscript
 
 excellon : prep $(EXCELLON_FILES)
 gerber : prep $(GERBER_FILES)
-postscript : prep $(EPS_FILES) $(SCHEMATIC) $(CHEAT_SHEET) $(PDF_PANELS)
+postscript : prep $(EPS_FILES) $(SCHEMATIC) $(DOCUMENTATION_SHEET) $(PDF_PANELS)
 
 clean :
 	rm -f $(GERBER_FILES) $(EXCELLON_FILES) \
-	      $(EPS_FILES) $(PS_PANELS) $(PDF_PANELS) 
+	      $(EPS_FILES) $(PS_PANELS) $(PDF_PANELS) \
+	      $(DOCUMENTATION_SHEET) $(SCHEMATIC)
 
 # remove files, that are not needed by Olimex
 fab-clean:
@@ -99,11 +101,14 @@ prep :
 %-cmp-top-silk.grb.plc: $(PROJECT).brd
 	$(GERB_CAM) -o$@ $(PROJECT).brd $(GRB_CMP_MIRROR) dimension tplace tnames
 
+%-documentation.grb : $(PROJECT).brd
+	$(GERB_CAM) -o$@ $(PROJECT).brd dimension document tplace tDocu pad drills milling measures
+
 %-cmp-top-silk.eps: $(PROJECT).brd
 	$(EPS_CAM) -o$@ $(EPS_CMP_MIRROR) $(PROJECT).brd dimension tplace tnames
 
-%-cheat-sheet.eps: $(PROJECT).brd
-	$(EPS_CAM) -s 3 -o$@ $(PROJECT).brd dimension tplace tnames tDocu pad
+%-documentation.eps: $(PROJECT).brd
+	$(EPS_CAM) -s 3 -r+ -o$@ $(PROJECT).brd dimension document tplace tDocu pad drill milling measures
 
 # Its easier to center the manual drill if the holes are small.
 %.smallhole-eps : %.eps
