o Add simple factory test function.

--- a/software/usb-host/Makefile
+++ b/software/usb-host/Makefile
@@ -1,8 +1,13 @@
 
 CXXFLAGS=-Wall
 
+all : microorb factory-test
+
 microorb : main.o microorb.o
-	$(CXX) -lusb $^ -o $@
+	$(CXX) $^ -o $@ -lusb
+
+factory-test : factory-test.cc microorb.o
+	$(CXX) $^ -o $@ -lusb
 
 clean:
 	rm -f microorb main.o microorb.o
