--- a/software/usb-host/Makefile
+++ b/software/usb-host/Makefile
@@ -10,4 +10,4 @@ factory-test : factory-test.cc microorb.o
 	$(CXX) $^ -o $@ -lusb -lncurses
 
 clean:
-	rm -f microorb main.o microorb.o factory-test.o
+	rm -f microorb factory-test main.o microorb.o factory-test.o
